# cpp-third-term

./: README.md
Copyfinder/: .gitignore  CMakeLists.txt  Copyfinder.pro  equals_class.cpp  equals_class.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfileexception.h  scanner.cpp  scanner.h
Copyfinder/tests/hardlink/: hardlink.txt
Copyfinder/tests/symlink/: sym.txt
SubstringFinder/: CMakeLists.txt  README.md  SubstringFinder.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  scanner.cpp  scanner.h  test.cpp  trigram.cpp  trigram.h  trigram.hpp  utf8_validator.hpp
SubstringFinder/build-SubstringFinder-Desktop_Qt_5_12_0_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
SubstringFinder/build-SubstringFinder-Desktop_Qt_5_12_0_MSVC2017_64bit-Debug/debug/: moc_mainwindow.cpp
SubstringFinder/build-SubstringFinder-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
linked_ptr/: CMakeLists.txt  linked_ptr.hpp  main.cpp
